Added more projects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Bar Zeitony</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" defer></script>
   <script src="assets/scripts/script.js" defer></script>
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -77,9 +77,11 @@
     </div>
     <div class="project-cards">
       <div class="card">
-        <a href="https://github.com/barzeito/Vacations" target="_blank" class="card-link">
-          <img src="assets/images/Vacation Project.png" alt="Vacations Project">
-        </a>
+        <div class="project-img">
+          <a href="https://github.com/barzeito/Vacations" target="_blank" class="card-link">
+            <img src="assets/images/Vacation Project.png" alt="Vacations Project">
+          </a>
+        </div>
         <div class="info">
           <h1>Vacations</h1>
           <p>
@@ -88,20 +90,27 @@
         </div>
       </div>
       <div class="card">
-        <img src="" alt="">
+        <div class="project-img">
+          <a href="https://github.com/barzeito/Cryptonite" target="_blank" class="card-link">
+            <img src="assets/images/Crypto Project.png" alt="">
+          </a>
+        </div>
         <div class="info">
-          <h1>Project2</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam neque necessitatibus soluta obcaecati.
-          </p>
+          <h1>Crypto</h1>
+          <p>Cryptonite lets you track real-time changes of over 11,000 digital coins. View dynamic charts to monitor
+            market trends instantly. Stay ahead with live data and smart insights.</p>
         </div>
       </div>
       <div class="card">
-        <img src="" alt="">
+        <div class="project-img">
+          <a href="https://github.com/barzeito/Memory-Game" target="_blank" class="card-link">
+            <img src="assets/images/Memory Project.png" alt="Vacations Project">
+          </a>
+        </div>
         <div class="info">
-          <h1>Project3</h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam neque necessitatibus soluta obcaecati.
+          <h1>Memory Game</h1>
+          <p>A fun and interactive Memory Game built with JavaScript! Test your memory by matching pairs of cards while
+            racing against the clock. Perfect for all ages!
           </p>
         </div>
       </div>
