--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#contact">Contact Me</a>
     </div>
     <div class="card">
-      <img src="assets/images/logo.jpg" alt="">
+      <img src="assets/images/Profile.jpg" alt="">
       <div class="card-info">
         <h1>Bar Zeitony</h1>
         <p>I'm a Full-Stack Web Developer passionate about building dynamic and user-friendly websites. I specialize in
@@ -132,6 +132,14 @@
     </form>
   </section>
   <footer id="footer">
+    <div class="social">
+      <a class="icon" target="_self" href="https://www.linkedin.com/in/bar-zeitony-bb4664281/">
+        <img src="assets/images/LinkedIn.png" alt="LinkedIn-logo" />
+      </a>
+      <a class="icon" target="_self" href="https://github.com/barzeito">
+        <img src="assets/images/github.png" alt="GitHub-logo" />
+      </a>
+    </div>
     <p>&copy; 2025 Bar Zeitony. All Rights Reserved.</p>
   </footer>
 </body>
